--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "parcel-bundler": "^1.11.0",
     "tslib": "^1.9.3",
     "typescript": "^3.2.2",
-    "@atsumaru/api-types": "github:atsumaru/api-types"
+    "@atsumaru/api-types": "github:atsumaru/api-types#v1.1.0"
   }
 }
