--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "commonjs",
     "lib": ["es5", "es6", "dom"],
     "strict": true,
-    "esModuleInterop": true,
-    "typeRoots": ["node_modules/@types", "node_modules/@atsumaru/api-types"]
+    "esModuleInterop": true
   }
 }
